--- a/search.html
+++ b/search.html
@@ -27,7 +27,7 @@
 <div class="hero-container">
   <div class="hero-body">
     <div class="hero" tabindex="-1" aria-live="polite">
-      <img src="https://m.media-amazon.com/images/I/71qWfXW6tbL.jpg" alt="Houston skyline">
+      <img src="/img/houston.png" alt="Houston skyline">
       <h1 style="padding:18px;">Search results</h1>
     </div>
 
@@ -384,3 +384,4 @@
 </script>
 </body>
 </html>
+
