--- a/search.html
+++ b/search.html
@@ -18,8 +18,8 @@
 	<div class="header-right">
 		<form class="search-form" action="/search.html" method="get" role="search">
 		  <label for="q" class="visually-hidden">Search articles</label>
-		  <input id="q" name="q" type="search" placeholder="Search articles" aria-label="Search articles">
-		  <button type="submit" aria-label="Submit search">🔎</button>
+  	  <input id="q" name="q" type="search" placeholder="Search articles" aria-label="Search articles">
+  	  <button type="submit" aria-label="Submit search"><i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i></button>
 		</form>
 	</div>
 </header>
@@ -138,6 +138,7 @@
   <h1>Channelview</h1>
   <h2 id="77530"></h2>
   </div>
+  <div class="side-ad-card">
   
   </div>
   </div>
@@ -382,6 +383,3 @@
 </script>
 </body>
 </html>
-
-
-
