--- a/article.html
+++ b/article.html
@@ -5,9 +5,22 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-	<title>Hourly Houston</title>
+    <title id="page-title">Hourly Houston</title>
+    <!-- SEO/meta placeholders (will be populated dynamically when the article loads) -->
+    <meta id="meta-desc" name="description" content="Hourly Houston article">
+    <meta id="meta-ogtitle" property="og:title" content="Hourly Houston">
+    <meta id="meta-ogdesc" property="og:description" content="Hourly Houston article">
+    <meta id="meta-ogimage" property="og:image" content="">
+    <meta id="meta-twitter" name="twitter:card" content="summary_large_image">
+
+    <!-- Injection templates: place small HTML widgets or scripts here using type="text/x-inject" and id matching the slot ids below.
+	    Example safe usage (paste into <head>):
+	    <script type="text/x-inject" id="inject-slot-1">&lt;div class="my-widget"&gt;Your widget HTML here&lt;/div&gt;</script>
+	    To execute JS instead of inserting HTML, add data-exec="true" and the runner will create and execute a real <script> element in the matching slot.
+    -->
+    <!-- you can add your inject templates here in the head; see ids: inject-slot-1, inject-slot-2, inject-slot-3 -->
 	<meta name="description" content="Get updated content for Houston Hourly!">
 	<meta name="author" content="Hourly Houston">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -150,6 +163,7 @@
 	<h1>Channelview</h1>
 	<h2 id="77530"></h2>
 	</div>
+	<div class="side-ad-card">
 	
 	</div>
   </div>
@@ -528,7 +542,15 @@
 
 	function bodyToHtml(text){
 		if(!text) return '';
-		return text.split(/\n\n+/).map(p => `<p>${p.replace(/\n/g,'<br/>')}</p>`).join('\n');
+		// split into paragraphs and insert injection slot divs between them
+		const parts = text.split(/\n\n+/).map(p => `<p>${p.replace(/\n/g,'<br/>')}</p>`);
+		// interleave injection placeholders (three slots max)
+		const out = [];
+		for(let i=0;i<parts.length;i++){
+			out.push(parts[i]);
+			if(i < 3){ out.push(`<div class="inject-slot" data-slot="inject-slot-${i+1}"></div>`); }
+		}
+		return out.join('\n');
 	}
 
 	async function load(){
@@ -549,6 +571,88 @@
 				img.alt = post.title || '';
 				heroEl.appendChild(img);
 			}
+
+			// Populate SEO/meta tags so shared links show useful preview
+			try{
+				const firstPara = (post.body||'').split(/\n\n+/)[0] || '';
+				document.getElementById('page-title').textContent = post.title || 'Hourly Houston';
+				document.getElementById('meta-desc').setAttribute('content', firstPara.replace(/\n/g,' '));
+				document.getElementById('meta-ogtitle').setAttribute('content', post.title || 'Hourly Houston');
+				document.getElementById('meta-ogdesc').setAttribute('content', firstPara.replace(/\n/g,' '));
+				document.getElementById('meta-ogimage').setAttribute('content', post.url || '');
+			}catch(e){/* ignore if DOM meta nodes missing */}
+
+			// After inserting the article body, run any inject templates found in the head
+			// Find .inject-slot placeholders and populate from matching <script type="text/x-inject" id="inject-slot-N">
+			(function runInjects(){
+				const slots = Array.from(document.querySelectorAll('.inject-slot'));
+				slots.forEach(slot => {
+					const id = slot.dataset.slot;
+					if(!id) return;
+					const tpl = document.getElementById(id);
+					if(!tpl) return;
+					const exec = tpl.getAttribute('data-exec') === 'true';
+					const content = tpl.textContent || tpl.innerText || '';
+					if(exec){
+						const s = document.createElement('script');
+						s.type = 'application/javascript';
+						s.text = content;
+						slot.appendChild(s);
+					}else{
+						// treat content as escaped HTML (user can include &lt;div&gt; markup in the template)
+						slot.innerHTML = content;
+					}
+				});
+			})();
+
+			// Helper: if the hero gets replaced by another page (race), offer a toggle so user can restore the article image
+			(function ensureHeroToggle(){
+				const hero = document.querySelector('.hero');
+				if(!hero) return;
+				// create toggle button (once)
+				let toggle = document.getElementById('hero-toggle-btn');
+				function makeToggle(){
+					if(toggle) return toggle;
+					toggle = document.createElement('button');
+					toggle.id = 'hero-toggle-btn';
+					toggle.textContent = 'Show article image';
+					toggle.setAttribute('aria-hidden','false');
+					toggle.style.position = 'absolute';				// position inside hero
+					toggle.style.right = '18px';
+					toggle.style.top = '18px';
+					toggle.style.zIndex = 5;
+					toggle.style.padding = '8px 12px';
+					toggle.style.borderRadius = '8px';
+					toggle.style.border = '0';
+					toggle.style.background = 'rgba(0,0,0,0.5)';
+					toggle.style.color = '#fff';
+					toggle.style.cursor = 'pointer';
+					hero.style.position = 'relative';
+					hero.appendChild(toggle);
+					return toggle;
+				}
+
+				function showArticleImage(){
+					hero.innerHTML = '';
+					const img = document.createElement('img'); img.src = post.url || ''; img.alt = post.title || '';
+					hero.appendChild(img);
+					if(toggle && toggle.parentNode) toggle.parentNode.removeChild(toggle);
+				}
+
+				// Observe hero for replacements and show toggle if needed
+				const obs = new MutationObserver(muts => {
+					const img = hero.querySelector('img');
+					if(img && img.src && post.url && img.src.indexOf(post.url) === -1){
+						// hero shows another image
+						makeToggle();
+						toggle.onclick = showArticleImage;
+					} else {
+						// hero already shows article image; remove toggle
+						if(toggle && toggle.parentNode) toggle.parentNode.removeChild(toggle);
+					}
+				});
+				obs.observe(hero, { childList: true, subtree: true });
+			})();
 			const t = document.getElementById('title'); if(t) t.textContent = post.title || '';
 			const dt = document.getElementById('date'); if(dt) dt.textContent = formatDate(post.scrapedAt || null);
 			const b = document.getElementById('body'); if(b) b.innerHTML = bodyToHtml(post.body || '');
@@ -560,4 +664,3 @@
 </script>
 </body>
 </html>
-
