--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<form class="search-form" action="/search.html" method="get" role="search">
 					<label for="site-search" class="visually-hidden">Search articles</label>
 					<input id="site-search" name="q" type="search" placeholder="Search articles" aria-label="Search articles">
-					<button type="submit" aria-label="Submit search">🔎</button>
+					<button type="submit" aria-label="Submit search"><i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i></button>
 				</form>
         	<!-- hamburger button: toggles the drawer on small screens -->
         	<button class="hamburger" aria-label="Open menu" aria-controls="drawer" aria-expanded="false" title="Open menu"><span class="bar"></span></button>
@@ -157,6 +157,7 @@
 	<h1>Channelview</h1>
 	<h2 id="77530"></h2>
 	</div>
+	<div class="side-ad-card">
 	
 	</div>
   </div>
@@ -542,4 +543,3 @@
 </script>
 </body>
 </html>
-
