--- a/article.html
+++ b/article.html
@@ -45,9 +45,9 @@
 	</div>
 
   <div class="header-right">
-		<a href="#" class="cta-link" aria-label="Test">
-			<button class="btn">Test</button>
-		</a>
+    	<a href="/about.html" class="cta-link" aria-label="About">
+    		<button class="btn">About</button>
+    	</a>
         	<!-- hamburger button: toggles the drawer on small screens -->
         	<button class="hamburger" aria-label="Open menu" aria-controls="drawer" aria-expanded="false" title="Open menu"><span class="bar"></span></button>
   </div>
