Update print statement from 'Hello' to 'Goodbye'

--- a/search.html
+++ b/search.html
@@ -16,11 +16,14 @@
 		</a>
 	</div>
 	<div class="header-right">
-		<form class="search-form" action="/search.html" method="get" role="search">
-		  <label for="q" class="visually-hidden">Search articles</label>
-  	  <input id="q" name="q" type="search" placeholder="Search articles" aria-label="Search articles">
-  	  <button type="submit" aria-label="Submit search"><i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i></button>
-		</form>
+    <form class="search-form" action="/search.html" method="get" role="search">
+      <label for="q" class="visually-hidden">Search articles</label>
+      <input id="q" name="q" type="search" placeholder="Search articles" aria-label="Search articles">
+      <button type="submit" aria-label="Submit search"><i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i></button>
+    </form>
+    <a href="/about.html" class="cta-link" aria-label="About">
+      <button class="btn">About</button>
+    </a>
 	</div>
 </header>
 
