Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	</div>
 
   <div class="header-right">
-		<a href="#" class="cta-link" aria-label="Test">
-			<button class="btn">Test</button>
-		</a>
+    	<a href="/about.html" class="cta-link" aria-label="About">
+    		<button class="btn">About</button>
+    	</a>
 				<!-- desktop search form (hidden on small screens) -->
 				<form class="search-form" action="/search.html" method="get" role="search">
 					<label for="site-search" class="visually-hidden">Search articles</label>
