Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -20,9 +20,11 @@
     <a href="/about.html" class="cta-link" aria-label="About">
       <button class="btn">About</button>
     </a>
-    <a href="/search.html" class="cta-link" aria-label="Search">
-      <button class="btn">Search</button>
-    </a>
+    <form class="search-form" action="/search.html" method="get" role="search">
+      <label for="q" class="visually-hidden">Search articles</label>
+      <input id="q" name="q" type="search" placeholder="Search articles" aria-label="Search articles">
+      <button type="submit" aria-label="Submit search"><i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i></button>
+    </form>
     <button class="hamburger" aria-label="Open menu" aria-controls="drawer" aria-expanded="false" title="Open menu"><span class="bar"></span></button>
   </div>
 </header>
