--- a/search.html
+++ b/search.html
@@ -9,25 +9,24 @@
 </head>
 <body>
 <header class="site-header">
-	<div class="header-left">
-		<a href="/" class="home-link">
-			<img src="img/icoW.png" alt="Hourly Houston logo" class="logo">
-			<h2 class="site-title">Hourly Houston</h2>
-		</a>
-	</div>
-	<div class="header-right">
+  <div class="header-left">
+    <a href="/" class="home-link">
+      <img src="img/icoW.png" alt="Hourly Houston logo" class="logo">
+      <h2 class="site-title">Hourly Houston</h2>
+    </a>
+  </div>
+  <div class="header-right">
+    <a href="/about.html" class="cta-link" aria-label="About">
+      <button class="btn">About</button>
+    </a>
     <form class="search-form" action="/search.html" method="get" role="search">
       <label for="q" class="visually-hidden">Search articles</label>
       <input id="q" name="q" type="search" placeholder="Search articles" aria-label="Search articles">
       <button type="submit" aria-label="Submit search"><i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i></button>
     </form>
-    <a href="/about.html" class="cta-link" aria-label="About">
-      <button class="btn">About</button>
-    </a>
-	</div>
+    <button class="hamburger" aria-label="Open menu" aria-controls="drawer" aria-expanded="false" title="Open menu"><span class="bar"></span></button>
+  </div>
 </header>
-
-<div class="hero-container">
   <div class="hero-body">
     <div class="hero" tabindex="-1" aria-live="polite">
       <img src="/img/houston.png" alt="Houston skyline">
