Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/search.html
+++ b/search.html
@@ -27,6 +27,7 @@
     <button class="hamburger" aria-label="Open menu" aria-controls="drawer" aria-expanded="false" title="Open menu"><span class="bar"></span></button>
   </div>
 </header>
+<div class="hero-container">
   <div class="hero-body">
     <div class="hero" tabindex="-1" aria-live="polite">
       <img src="/img/houston.png" alt="Houston skyline">
