--- a/article.html
+++ b/article.html
@@ -540,7 +540,15 @@
 // Final article loader: fetch post by title from querystring and populate the page (hero image, title, date, body)
 (function(){
 	function getTitleFromQS(){
-		try{ return decodeURIComponent(location.search.replace(/^\?/,'')).trim(); }catch(e){ return ''; }
+		try{
+			// Prefer explicit 'title' query param. URLSearchParams returns decoded values.
+			const params = new URLSearchParams(location.search);
+			const t = params.get('title');
+			return t ? String(t).trim() : '';
+		}catch(e){
+			// fallback to previous behavior (best-effort)
+			try{ return decodeURIComponent(location.search.replace(/^\?/,'')).trim(); }catch(e){ return ''; }
+		}
 	}
 
 	function formatDate(iso){
@@ -583,27 +591,52 @@
 
 			// Populate SEO/meta tags so shared links show useful preview
 			try{
-				const firstPara = (post.body||'').split(/\n\n+/)[0] || '';
-				// set document title and meta tags for social previews
-				const pageTitle = `Hourly Houston - ${post.title || ''}`.trim();
-				document.getElementById('page-title').textContent = pageTitle;
-				// standard description
-				const desc = firstPara.replace(/\n/g,' ');
-				const img = post.url || '';
-				const title = post.title || 'Hourly Houston';
-				document.getElementById('meta-desc').setAttribute('content', desc);
+				// Take the text up to the first newline as the short description/preview
+				const firstPara = (post.body||'').split(/\n/)[0] || '';
+				const siteName = 'Hourly Houston';
+				// page title should include site name + article title
+				const pageTitle = `${siteName} - ${post.title || ''}`.trim();
+				// update <title>
+				const titleEl = document.getElementById('page-title');
+				if(titleEl) titleEl.textContent = pageTitle;
+				// also update document.title for good measure
+				try{ document.title = pageTitle; }catch(e){}
+
+				// Prepare description variants
+				const firstParaClean = firstPara.replace(/\n/g,' ').trim();
+				const standardDesc = `${siteName} - ${firstParaClean}`.trim(); // used for meta[name=description]
+				const ogDesc = firstParaClean; // used for Open Graph/Twitter description
+
+				// Ensure image URL is absolute (some stored urls may be relative)
+				let imgUrl = post.url || '';
+				if(imgUrl && !/^https?:\/\//i.test(imgUrl)){
+					imgUrl = (location.origin || (location.protocol + '//' + location.host)).replace(/\/$/,'') + '/' + String(imgUrl).replace(/^\//,'');
+				}
+
+				const titleOnly = post.title || siteName;
+
+				// Update any meta[name="description"] (there's a duplicate meta in the head) to keep crawlers consistent
+				const descMetas = document.querySelectorAll('meta[name="description"]');
+				if(descMetas && descMetas.length){
+					descMetas.forEach(m => m.setAttribute('content', standardDesc));
+				}
+				// Update the id'd meta-desc if present (keeps existing code paths)
+				const metaDescEl = document.getElementById('meta-desc'); if(metaDescEl) metaDescEl.setAttribute('content', standardDesc);
+
 				// Open Graph
-				document.getElementById('meta-ogtitle').setAttribute('content', title);
-				document.getElementById('meta-ogdesc').setAttribute('content', desc);
-				document.getElementById('meta-ogimage').setAttribute('content', img);
-				document.getElementById('meta-ogurl').setAttribute('content', location.href);
-				document.getElementById('meta-ogsite').setAttribute('content', 'Hourly Houston');
+				const ogTitleEl = document.getElementById('meta-ogtitle'); if(ogTitleEl) ogTitleEl.setAttribute('content', titleOnly);
+				const ogDescEl = document.getElementById('meta-ogdesc'); if(ogDescEl) ogDescEl.setAttribute('content', ogDesc);
+				const ogImageEl = document.getElementById('meta-ogimage'); if(ogImageEl) ogImageEl.setAttribute('content', imgUrl);
+				const ogUrlEl = document.getElementById('meta-ogurl'); if(ogUrlEl) ogUrlEl.setAttribute('content', location.href);
+				const ogSiteEl = document.getElementById('meta-ogsite'); if(ogSiteEl) ogSiteEl.setAttribute('content', siteName);
+
 				// Twitter
-				document.getElementById('meta-twitter-title').setAttribute('content', title);
-				document.getElementById('meta-twitter-desc').setAttribute('content', desc);
-				document.getElementById('meta-twitter-image').setAttribute('content', img);
+				const twTitleEl = document.getElementById('meta-twitter-title'); if(twTitleEl) twTitleEl.setAttribute('content', titleOnly);
+				const twDescEl = document.getElementById('meta-twitter-desc'); if(twDescEl) twDescEl.setAttribute('content', ogDesc);
+				const twImageEl = document.getElementById('meta-twitter-image'); if(twImageEl) twImageEl.setAttribute('content', imgUrl);
+
 				// fallback meta name=title
-				document.getElementById('meta-name-title').setAttribute('content', pageTitle);
+				const metaNameTitle = document.getElementById('meta-name-title'); if(metaNameTitle) metaNameTitle.setAttribute('content', pageTitle);
 			}catch(e){/* ignore if DOM meta nodes missing */}
 
 			// After inserting the article body, run any inject templates found in the head
